--- a/home.html
+++ b/home.html
@@ -17,20 +17,28 @@
                 <div class="display">
                   <div class="artboard artboard-demo phone-3">
                     <!-- start -->
+                     <h1 class="text-2xl font-bold mb-10">Payoo Home</h1>
                      <!-- balance -->
-                    <div class="stats shadow">
-                        <div class="stat">
-                          <div class="stat-title">Amount Balance</div>
-                          <div id="main-balance" class="stat-value">8400</div>
-                         
-                        </div>
-                      </div>
+                    <div class=" flex gap-20 items-center">
+                        <div class="stats shadow">
+                            <div class="stat">
+                              <div class="stat-title">Amount Balance</div>
+                              <div id="main-balance" class="stat-value">8400</div>
+                             
+                            </div>
+                          </div>
+                          <!-- logout btn -->
+                          <button id="log-out" class="btn btn-outline">Log Out</button>
+                    </div>
                       <div class="divider"></div>
                       <!-- fetures -->
-                    <div class=" flex gap-2">
-                        <button id="show-addmoney" class="btn btn-lg">Add money</button>
-                        <button id="show-cashOut" class="btn btn-lg">Cash out</button>
-                        <button id="show-history" class="btn btn-lg">Transaction</button>
+                    <div class=" grid grid-cols-3 gap-4">
+                        <button id="show-addmoney" class="btn btn-md">Add money</button>
+                        <button id="show-cashOut" class="btn btn-md">Cash out</button>
+                        <button id="show-history" class="btn btn-md">Transaction</button>
+                        <button id="pay" class="btn btn-md">pay</button>
+                        <button id="gift" class="btn btn-md">gift</button>
+                        <button id="transfer" class="btn btn-md">transfer</button>
                     </div>
                     <!-- fetures end -->
                      <div class="divider"></div>
